# autotom_digital_twin

./: README.md  patch_usd.py  patch_z_only.py  plant_day01.html  plant_day01.usda  plant_day1.html  plant_day26.html  plant_day26.json  plant_day26.usda  plant_day3.html  plant_day3.json  plant_day3.usda  pyproject.toml  requirements.txt  revert_az.py  run_main.sh  test.csv
model/: Model.rgg  crop_level.rgg  initiation.rgg  photosynthesis.rgg  plant_level.rgg  project.gs  rewrite_rules.rgg  surroundings.rgg  updates.rgg
model/param/: auxiliary_tools_and_charts.rgg  parameters.rgg
model_randomized/: README.md
model_randomized/model/: MTG_importer.rgg  Model.rgg  initiation.rgg  light.rgg  organs.rgg  rewrite_rules.rgg
output/day_10/: plant_day10.html  plant_day10.json  plant_day10.usda
output/day_100/: plant_day100.html  plant_day100.json  plant_day100.usda
output/day_15/: plant_day15.html  plant_day15.json  plant_day15.usda
output/day_160/: plant_day160.html  plant_day160.json  plant_day160.usda
output/day_20/: plant_day20.html  plant_day20.json  plant_day20.usda
output/day_3/: plant_day3.html  plant_day3.json  plant_day3.usda
output/day_4/: plant_day4.html  plant_day4.json  plant_day4.usda
output/day_6/: plant_day6.html  plant_day6.json  plant_day6.usda
output/day_63/: plant_day63.html  plant_day63.json  plant_day63.usda
output/day_80/: plant_day80.html  plant_day80.json  plant_day80.usda
src/plant_model/: constants.py  debug_viz.py  graph_export.py  loader.py  main.py  models.py  usd_exporter.py  usd_exporter2.py  (+1 more)
typings/: Boost  pxr
(+429 files in other folders)
