[project]
name = "autotom-digital-twin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "networkx>=3.6.1",
    "pandas>=3.0.3",
    "pyvis>=0.3.2",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hatchling>=1.30.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/plant_model"]
